--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_integrated_training.ipynb
@@ -400,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def construct_pipeline():\n",
+    "def construct_pipeline(input_files: list[str]):\n",
     "    # Create a pipeline object\n",
     "    pipeline = Pipeline(config)\n",
     "\n",
@@ -439,7 +439,7 @@
    "source": [
     "input_files = load_train_only_input_files\n",
     "\n",
-    "pipeline = construct_pipeline()\n",
+    "pipeline = construct_pipeline(input_files)\n",
     "await pipeline.run_async()"
    ]
   },
@@ -462,7 +462,7 @@
    "source": [
     "input_files = load_train_inference_input_files\n",
     "\n",
-    "pipeline = construct_pipeline()\n",
+    "pipeline = construct_pipeline(input_files)\n",
     "await pipeline.run_async()"
    ]
   },
