--- a/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_training.ipynb
+++ b/examples/digital_fingerprinting/production/morpheus/notebooks/dfp_azure_training.ipynb
@@ -58,7 +58,6 @@
     "import mlflow\n",
     "import typing\n",
     "from datetime import datetime\n",
-    "from functools import partial\n",
     "\n",
     "from dfp.stages.dfp_file_batcher_stage import DFPFileBatcherStage\n",
     "from dfp.stages.dfp_file_to_df import DFPFileToDataFrameStage\n",
@@ -80,13 +79,12 @@
     "from morpheus.config import CppConfig\n",
     "from morpheus.pipeline import LinearPipeline\n",
     "from morpheus.utils.column_info import ColumnInfo\n",
-    "from morpheus.utils.column_info import CustomColumn\n",
     "from morpheus.utils.column_info import DataFrameInputSchema\n",
     "from morpheus.utils.column_info import DateTimeColumn\n",
+    "from morpheus.utils.column_info import DistinctIncrementColumn\n",
     "from morpheus.utils.column_info import IncrementColumn\n",
     "from morpheus.utils.column_info import RenameColumn\n",
     "from morpheus.utils.column_info import StringCatColumn\n",
-    "from morpheus.utils.column_info import create_increment_col\n",
     "from morpheus.utils.file_utils import date_extractor\n",
     "from morpheus.utils.logger import configure_logging\n",
     "\n",
@@ -277,12 +275,16 @@
     "                    dtype=int,\n",
     "                    input_name=config.ae.timestamp_column_name,\n",
     "                    groupby_column=config.ae.userid_column_name),\n",
-    "    CustomColumn(name=\"locincrement\",\n",
-    "                    dtype=int,\n",
-    "                    process_column_fn=partial(create_increment_col, column_name=\"location\")),\n",
-    "    CustomColumn(name=\"appincrement\",\n",
-    "                    dtype=int,\n",
-    "                    process_column_fn=partial(create_increment_col, column_name=\"appDisplayName\")),\n",
+    "    DistinctIncrementColumn(name=\"locincrement\",\n",
+    "                            dtype=int,\n",
+    "                            input_name=\"location\",\n",
+    "                            groupby_column=config.ae.userid_column_name,\n",
+    "                            timestamp_column=config.ae.timestamp_column_name),\n",
+    "    DistinctIncrementColumn(name=\"appincrement\",\n",
+    "                            dtype=int,\n",
+    "                            input_name=\"appDisplayName\",\n",
+    "                            groupby_column=config.ae.userid_column_name,\n",
+    "                            timestamp_column=config.ae.timestamp_column_name)\n",
     "]\n",
     "\n",
     "preprocess_schema = DataFrameInputSchema(column_info=preprocess_column_info, preserve_columns=[\"_batch_id\"])\n"
