docstring fixed, conda req added

--- a/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
+++ b/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the number of samples of training data is small we augment data using benign transaction examples from the original training samples. This increase the number of benign example and reduce the proportion of fraud label transactions. This in similar to practical situation where fraud labels are few in proportion."
+    "Since the number of samples of training data is small we augment data using benign transaction examples from the original training samples. This increases the number of benign example and reduce the proportion of fraudulent transactions. This is similar to practical situation where frauds are few in proportion."
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, nodes, edges, and features are passed to the `build_fsi_graph` method. Note that client and merchant node data is featurless, instread node embedding is used. Therefore all the relevant transaction data resides at the transaction node."
+    "Here, nodes, edges, and features are passed to the `build_fsi_graph` method. Note that client and merchant node data are featurless, instead node embedding is used as a feature for these nodes. Therefore all the relevant transaction data resides at the transaction node."
    ]
   },
   {
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the highly imbalanced nature of our dataset, we evaluate the results based on precision-recall and AUC."
+    "Given the highly imbalanced nature of the dataset, we can evaluate the results based on AUC, accuracy ...etc."
    ]
   },
   {
@@ -917,7 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save the two trained models, a graphsage and xgboost into their respective save format. For infernce, graphsage is loaded as pytorch model, and the XGBoost is loaded using `cuml` *Forest Inference Library (FIL)*."
+    "The graphsage and xgboost models can be saved into their respective save format using `save_model` method. For infernce, graphsage load as pytorch model, and the XGBoost load using `cuml` *Forest Inference Library (FIL)*."
    ]
   },
   {
@@ -950,12 +950,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## For inference we can load from file as follows. \n",
-    "from training_fsi import load_model\n",
+    "from training import load_model\n",
     "# do inference on loaded model, as follows\n",
     "# hinsage_model,  hyperparam, g = load_model(model_dir, device)"
    ]
