converted pandas ref to cudf & model restructure

--- a/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
+++ b/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
@@ -70,7 +70,7 @@
     "from torchmetrics.functional import accuracy\n",
     "from tqdm import trange\n",
     "from xgboost import XGBClassifier\n",
-    "from training_fsi import (get_metrics, evaluate, init_loaders, build_fsi_graph,\n",
+    "from training import (get_metrics, evaluate, init_loaders, build_fsi_graph,\n",
     "                     map_node_id, prepare_data, save_model, train)\n"
    ]
   },
