migrate remaining pandas code to cudf

--- a/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
+++ b/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
@@ -50,13 +50,11 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
     "import os\n",
     "import dgl\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from model import HeteroRGCN\n",
@@ -73,7 +71,7 @@
     "from xgboost import XGBClassifier\n",
     "from training import (get_metrics, evaluate, init_loaders, build_fsi_graph,\n",
     "                   save_model, train)\n",
-    "import cudf as cf"
+    "import cudf"
    ]
   },
   {
@@ -98,15 +96,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace training-data.csv and validation-data.csv with training & validation csv in dataset file.\n",
     "TRAINING_DATA ='../../datasets/training-data/fraud-detection-training-data.csv'\n",
     "VALIDATION_DATA = '../../datasets/validation-data/fraud-detection-validation-data.csv'\n",
-    "train_data = pd.read_csv(TRAINING_DATA)\n",
-    "inductive_data = pd.read_csv(VALIDATION_DATA)"
+    "train_data = cudf.read_csv(TRAINING_DATA)\n",
+    "inductive_data = cudf.read_csv(VALIDATION_DATA)"
    ]
   },
   {
@@ -119,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,8 +125,8 @@
     "def augment_data(train_data=train_data, n=20):\n",
     "    train_data.drop(columns=['index'], inplace=True, axis=1)\n",
     "    non_fraud = train_data[train_data['fraud_label'] == 0]\n",
-    "    df_fraud = pd.concat([non_fraud for _ in range(n)])\n",
-    "    df_train = pd.concat([train_data, df_fraud])\n",
+    "    df_fraud = cudf.concat([non_fraud for _ in range(n)])\n",
+    "    df_train = cudf.concat([train_data, df_fraud])\n",
     "    df_train.reset_index(inplace=True)\n",
     "    df_train['index'] = df_train.index\n",
     "\n",
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,11 +163,11 @@
       "The distribution of fraud for the train data is:\n",
       " 0    11865\n",
       "1      188\n",
-      "Name: fraud_label, dtype: int64\n",
+      "Name: fraud_label, dtype: int32\n",
       "The distribution of fraud for the inductive data is:\n",
       " 0    244\n",
       "1     21\n",
-      "Name: fraud_label, dtype: int64\n"
+      "Name: fraud_label, dtype: int32\n"
      ]
     }
    ],
@@ -180,12 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train_data, test_data, train_index, test_index, labels, all_data\n",
-    "train_data, test_data, train_idx, inductive_idx, labels, df = prepare_data(cf.from_pandas(train_data), cf.from_pandas(inductive_data))"
+    "train_data, test_data, train_idx, inductive_idx, labels, df = prepare_data(train_data, inductive_data)"
    ]
   },
   {
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -296,14 +294,14 @@
      "text": [
       "  0%|          | 0/20 [00:00<?, ?it/s]/home/efajardo/miniconda3/envs/morpheus/lib/python3.10/site-packages/dgl/backend/pytorch/tensor.py:445: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
       "  assert input.numel() == input.storage().size(), (\n",
-      "  5%|▌         | 1/20 [00:02<00:51,  2.70s/it]"
+      "  5%|▌         | 1/20 [00:02<00:52,  2.76s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0/20 | Train Accuracy: 1.0 | Train Loss: 8.364539084920459\n",
+      "Epoch 0/20 | Train Accuracy: 1.0 | Train Loss: 8.364538975722887\n",
       "Validation Accuracy: 0.7320754528045654 auc 0.1592130100188761\n"
      ]
     },
@@ -311,14 +309,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 2/20 [00:05<00:46,  2.58s/it]"
+      " 10%|█         | 2/20 [00:05<00:47,  2.64s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 | Train Accuracy: 1.0 | Train Loss: 112.15737052381232\n",
+      "Epoch 1/20 | Train Accuracy: 1.0 | Train Loss: 112.15738137422963\n",
       "Validation Accuracy: 0.7320754528045654 auc 0.5462465514737912\n"
      ]
     },
@@ -326,14 +324,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 15%|█▌        | 3/20 [00:07<00:43,  2.53s/it]"
+      " 15%|█▌        | 3/20 [00:07<00:44,  2.61s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 2/20 | Train Accuracy: 1.0 | Train Loss: 525.2876669457024\n",
+      "Epoch 2/20 | Train Accuracy: 1.0 | Train Loss: 525.2877785372972\n",
       "Validation Accuracy: 0.7358490824699402 auc 0.8560331058516045\n"
      ]
     },
@@ -341,14 +339,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 4/20 [00:10<00:40,  2.51s/it]"
+      " 20%|██        | 4/20 [00:10<00:41,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 3/20 | Train Accuracy: 1.0 | Train Loss: 200.01578086774106\n",
+      "Epoch 3/20 | Train Accuracy: 1.0 | Train Loss: 200.01628349609354\n",
       "Validation Accuracy: 0.7396226525306702 auc 0.8799186873820241\n"
      ]
     },
@@ -356,14 +354,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 5/20 [00:12<00:37,  2.52s/it]"
+      " 25%|██▌       | 5/20 [00:13<00:38,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 4/20 | Train Accuracy: 1.0 | Train Loss: 90.4673070323206\n",
+      "Epoch 4/20 | Train Accuracy: 1.0 | Train Loss: 90.46722278861125\n",
       "Validation Accuracy: 0.7433962225914001 auc 0.8205314360389139\n"
      ]
     },
@@ -371,14 +369,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 6/20 [00:15<00:35,  2.51s/it]"
+      " 30%|███       | 6/20 [00:15<00:35,  2.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 5/20 | Train Accuracy: 1.0 | Train Loss: 57.875138325151056\n",
+      "Epoch 5/20 | Train Accuracy: 1.0 | Train Loss: 57.87523431493901\n",
       "Validation Accuracy: 0.7358490824699402 auc 0.8681573979962247\n"
      ]
     },
@@ -386,14 +384,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 35%|███▌      | 7/20 [00:17<00:32,  2.52s/it]"
+      " 35%|███▌      | 7/20 [00:18<00:33,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 6/20 | Train Accuracy: 1.0 | Train Loss: 24.510831227060407\n",
+      "Epoch 6/20 | Train Accuracy: 1.0 | Train Loss: 24.51080822898075\n",
       "Validation Accuracy: 0.7433962225914001 auc 0.9358211122404531\n"
      ]
     },
@@ -401,14 +399,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 8/20 [00:20<00:30,  2.52s/it]"
+      " 40%|████      | 8/20 [00:20<00:31,  2.59s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 7/20 | Train Accuracy: 1.0 | Train Loss: 19.741579514928162\n",
+      "Epoch 7/20 | Train Accuracy: 1.0 | Train Loss: 19.741554783657193\n",
       "Validation Accuracy: 0.7584905624389648 auc 0.9371279221722085\n"
      ]
     },
@@ -416,14 +414,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 45%|████▌     | 9/20 [00:22<00:27,  2.51s/it]"
+      " 45%|████▌     | 9/20 [00:23<00:28,  2.60s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 8/20 | Train Accuracy: 1.0 | Train Loss: 15.446274195797741\n",
+      "Epoch 8/20 | Train Accuracy: 1.0 | Train Loss: 15.446269849315286\n",
       "Validation Accuracy: 0.7547169923782349 auc 0.9406127486568898\n"
      ]
     },
@@ -431,14 +429,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 10/20 [00:25<00:25,  2.51s/it]"
+      " 50%|█████     | 10/20 [00:25<00:25,  2.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 9/20 | Train Accuracy: 1.0 | Train Loss: 14.80114306602627\n",
+      "Epoch 9/20 | Train Accuracy: 1.0 | Train Loss: 14.801136838272214\n",
       "Validation Accuracy: 0.7547169923782349 auc 0.941846958036881\n"
      ]
     },
@@ -446,14 +444,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 55%|█████▌    | 11/20 [00:27<00:22,  2.51s/it]"
+      " 55%|█████▌    | 11/20 [00:28<00:23,  2.56s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 10/20 | Train Accuracy: 1.0 | Train Loss: 13.875870674848557\n",
+      "Epoch 10/20 | Train Accuracy: 1.0 | Train Loss: 13.87586941383779\n",
       "Validation Accuracy: 0.7547169923782349 auc 0.9493974154203572\n"
      ]
     },
@@ -461,14 +459,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 12/20 [00:30<00:20,  2.53s/it]"
+      " 60%|██████    | 12/20 [00:30<00:20,  2.55s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 11/20 | Train Accuracy: 1.0 | Train Loss: 14.225338330026716\n",
+      "Epoch 11/20 | Train Accuracy: 1.0 | Train Loss: 14.225337034091353\n",
       "Validation Accuracy: 0.7584905624389648 auc 0.9449687817627413\n"
      ]
     },
@@ -476,14 +474,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 65%|██████▌   | 13/20 [00:32<00:17,  2.52s/it]"
+      " 65%|██████▌   | 13/20 [00:33<00:17,  2.55s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 12/20 | Train Accuracy: 1.0 | Train Loss: 14.037583370693028\n",
+      "Epoch 12/20 | Train Accuracy: 1.0 | Train Loss: 14.03758096601814\n",
       "Validation Accuracy: 0.7584905624389648 auc 0.9457673878321475\n"
      ]
     },
@@ -491,14 +489,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 14/20 [00:35<00:15,  2.51s/it]"
+      " 70%|███████   | 14/20 [00:36<00:15,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 13/20 | Train Accuracy: 1.0 | Train Loss: 13.155217349529266\n",
+      "Epoch 13/20 | Train Accuracy: 1.0 | Train Loss: 13.155211296398193\n",
       "Validation Accuracy: 0.7622641324996948 auc 0.9478002032815449\n"
      ]
     },
@@ -506,14 +504,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 75%|███████▌  | 15/20 [00:37<00:12,  2.50s/it]"
+      " 75%|███████▌  | 15/20 [00:38<00:12,  2.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 14/20 | Train Accuracy: 1.0 | Train Loss: 13.074130383087322\n",
+      "Epoch 14/20 | Train Accuracy: 1.0 | Train Loss: 13.074136503273621\n",
       "Validation Accuracy: 0.7622641324996948 auc 0.9480906054886018\n"
      ]
     },
@@ -521,14 +519,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 16/20 [00:40<00:10,  2.50s/it]"
+      " 80%|████████  | 16/20 [00:41<00:10,  2.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 15/20 | Train Accuracy: 1.0 | Train Loss: 12.887040423229337\n",
+      "Epoch 15/20 | Train Accuracy: 1.0 | Train Loss: 12.887006599456072\n",
       "Validation Accuracy: 0.7622641324996948 auc 0.9485262087991868\n"
      ]
     },
@@ -536,60 +534,60 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 85%|████████▌ | 17/20 [00:42<00:07,  2.53s/it]"
+      " 85%|████████▌ | 17/20 [00:43<00:07,  2.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 16/20 | Train Accuracy: 1.0 | Train Loss: 13.250047401059419\n",
-      "Validation Accuracy: 0.7584905624389648 auc 0.9495426165238856\n"
+      "Epoch 16/20 | Train Accuracy: 1.0 | Train Loss: 13.221301457379013\n",
+      "Validation Accuracy: 0.7584905624389648 auc 0.9499056192827066\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 18/20 [00:45<00:05,  2.55s/it]"
+      " 90%|█████████ | 18/20 [00:46<00:05,  2.56s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 17/20 | Train Accuracy: 1.0 | Train Loss: 11.86157701490447\n",
-      "Validation Accuracy: 0.7660377621650696 auc 0.9554232612167852\n"
+      "Epoch 17/20 | Train Accuracy: 1.0 | Train Loss: 12.095282299211249\n",
+      "Validation Accuracy: 0.7660377621650696 auc 0.9544068534920864\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 95%|█████████▌| 19/20 [00:48<00:02,  2.55s/it]"
+      " 95%|█████████▌| 19/20 [00:48<00:02,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 18/20 | Train Accuracy: 1.0 | Train Loss: 12.42901663039811\n",
-      "Validation Accuracy: 0.7660377621650696 auc 0.9425003630027589\n"
+      "Epoch 18/20 | Train Accuracy: 1.0 | Train Loss: 12.169320295681246\n",
+      "Validation Accuracy: 0.7660377621650696 auc 0.9448235806592131\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:50<00:00,  2.53s/it]"
+      "100%|██████████| 20/20 [00:51<00:00,  2.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 19/20 | Train Accuracy: 1.0 | Train Loss: 12.172889983397909\n",
-      "Validation Accuracy: 0.7811321020126343 auc 0.9520110352838682\n"
+      "Epoch 19/20 | Train Accuracy: 1.0 | Train Loss: 12.063936041318811\n",
+      "Validation Accuracy: 0.7698113322257996 auc 0.9520836358356324\n"
      ]
     },
     {
@@ -635,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -662,14 +660,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Test Accuracy: 0.7735849022865295 auc 0.9296500653404965\n"
+      "Final Test Accuracy: 0.7509434223175049 auc 0.9314650791346014\n"
      ]
     }
    ],
@@ -682,7 +680,6 @@
     "test_acc = accuracy(test_logits.argmax(dim=1), labels.long()[test_seeds].cpu(), \"binary\").item()\n",
     "test_auc = roc_auc_score(labels.long()[test_seeds].cpu().numpy(), test_logits[:, 1].numpy())\n",
     "\n",
-    "metrics_result = pd.DataFrame()\n",
     "print(f\"Final Test Accuracy: {test_acc} auc {test_auc}\")\n",
     "\n",
     "#acc, f_1, precision, recall, roc_auc, pr_auc, average_precision, _, _ = get_metrics(\n",
@@ -709,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +757,7 @@
        "              predictor=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,14 +803,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final Test Accuracy: 0.8339622641509434 auc 0.9136053434006098\n"
+      "Final Test Accuracy: 0.8377358490566038 auc 0.9036590678089155\n"
      ]
     }
    ],
@@ -849,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
