--- a/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
+++ b/models/training-tuning-scripts/fraud-detection-models/gnn-fraud-detection-training.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rearage test data index\n",
+    "# re-arange test data index\n",
     "last_train_index = train_data.index.max()+1\n",
     "inductive_data.index = np.arange(last_train_index, last_train_index + inductive_data.shape[0])\n",
     "inductive_data['index'] = inductive_data.index"
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split trainig, testing dataset\n",
+    "# Split into training, testing datasets\n",
     "train_data, test_data, train_idx, inductive_idx, labels, df = prepare_data(train_data, inductive_data)"
    ]
   },
