--- a/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
+++ b/examples/cyber_dev_day/notebooks/cyber-dev-day.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "# Cyber Developer Day 2024\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "TODO\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Note:</b> Please continue running the notebook up to Part 1 during the introduction presentation to ensure your environment is set up correctly.\n",
-    "</div>"
+    "</div>\n"
    ]
   },
   {
@@ -22,7 +23,7 @@
    "source": [
     "### Environment Setup\n",
     "\n",
-    "The following code blocks are used to setup environment variables and imports for the rest of the notebook."
+    "The following code blocks are used to setup environment variables and imports for the rest of the notebook.\n"
    ]
   },
   {
@@ -99,8 +100,10 @@
     "# Global imports\n",
     "import os\n",
     "import sys\n",
-    "import cudf\n",
-    "import pandas as pd"
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import cudf"
    ]
   },
   {
@@ -108,7 +111,7 @@
    "id": "7932f728",
    "metadata": {},
    "source": [
-    "Configure logging to allow Morpheus messages to appear in the notebook."
+    "Configure logging to allow Morpheus messages to appear in the notebook.\n"
    ]
   },
   {
@@ -122,6 +125,7 @@
    "source": [
     "# Configure logging\n",
     "import logging\n",
+    "\n",
     "import cyber_dev_day\n",
     "\n",
     "# Create a logger for this module. Use the cyber_dev_day module name because the notebook will just be __main__\n",
@@ -155,7 +159,7 @@
     "\n",
     "## Part 1 - Intro to Interacting with LLMs\n",
     "\n",
-    "This section will go over how to integrate LLMs into code with GUI or Python based examples"
+    "This section will go over how to integrate LLMs into code with GUI or Python based examples\n"
    ]
   },
   {
@@ -167,16 +171,19 @@
    },
    "outputs": [],
    "source": [
-    "from nemollm.api import NemoLLM\n",
     "from pprint import pprint\n",
     "\n",
+    "from nemollm.api import NemoLLM\n",
+    "\n",
     "# If you do not specify an api_key or an org_id, it will use environment variables\n",
-    "conn = NemoLLM()\n",
+    "conn = NemoLLM(api_host=os.getenv(\"NGC_API_BASE\", None), )\n",
     "\n",
     "response = conn.generate(\n",
-    "  prompt=\"Message Mason saying that we should compete in next week's football tournament, and tell him that the winner will get $100.\",\n",
-    "  model=\"gpt-43b-002\",\n",
-    "  customization_id=\"f4cd7435-def4-41e5-835b-9febb679ce01\",\n",
+    "    prompt=\n",
+    "    \"Message Mason saying that we should compete in next week's football tournament, and tell him that the winner will get $100.\",\n",
+    "    model=\"gpt-43b-002\",\n",
+    "    customization_id=\"f4cd7435-def4-41e5-835b-9febb679ce01\",\n",
+    "    return_type=\"text\",\n",
     ")\n",
     "pprint(response)"
    ]
@@ -186,7 +193,7 @@
    "id": "6f6b528a",
    "metadata": {},
    "source": [
-    "Try some for yourself! Here are a few other ideas on things to try out: \n",
+    "Try some for yourself! Here are a few other ideas on things to try out:\n",
     "\n",
     "1. Try out different prompts and see how the model responds\n",
     "   1. Are there prompts that work better than others?\n",
@@ -195,7 +202,7 @@
     "   2. You can use any one of these models: `[\"gpt-8b-000\", \"gpt-20b\", \"gpt-43b-002\"]`\n",
     "3. Try out different temperature values and see how they compare\n",
     "   1. Are there temperature values that work better than others?\n",
-    "   2. What happens when you set the temperature to 0? What about 1?"
+    "   2. What happens when you set the temperature to 0? What about 1?\n"
    ]
   },
   {
@@ -211,7 +218,7 @@
     "\n",
     "Background of RAG, data sources, building vector databases\n",
     "\n",
-    "### Building the Vector Database"
+    "### Building the Vector Database\n"
    ]
   },
   {
@@ -223,24 +230,26 @@
    },
    "outputs": [],
    "source": [
-    "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "from cyber_dev_day.embeddings import create_code_embedding\n",
+    "from langchain.embeddings.huggingface import HuggingFaceEmbeddings\n",
     "\n",
     "# Create the embedding object that will be used to generate the embeddings\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\", model_kwargs={\"device\":\"cuda\"}, show_progress=True)\n",
+    "embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-mpnet-base-v2\",\n",
+    "                                   model_kwargs={\"device\": \"cuda\"},\n",
+    "                                   show_progress=True)\n",
     "\n",
     "# Create a vector database of the code using the supplied embedding function. The returned value will be a\n",
     "# FaissVectorDatabase object.\n",
     "# NOTE: This may take a few minutes to run.\n",
-    "faiss_vdb = create_code_embedding(code_dir=os.getenv(\"MORPHEUS_ROOT\"), embedding=embeddings, include_notebooks=False, exclude=[\n",
-    "    \".cache/**/*.py\",\n",
-    "    \"build*/**/*.py\"\n",
-    "])\n",
+    "faiss_vdb = create_code_embedding(code_dir=os.getenv(\"MORPHEUS_ROOT\"),\n",
+    "                                  embedding=embeddings,\n",
+    "                                  include_notebooks=False,\n",
+    "                                  exclude=[\".cache/**/*.py\", \"build*/**/*.py\"])\n",
     "\n",
     "# Save the vector database to disk\n",
     "code_faiss_dir = os.path.join(os.getenv(\"MORPHEUS_ROOT\"), \".tmp\", \"morpheus_code_faiss\")\n",
     "\n",
-    "faiss_vdb.save_local(code_faiss_dir)\n"
+    "faiss_vdb.save_local(code_faiss_dir)"
    ]
   },
   {
@@ -254,7 +263,7 @@
     "\n",
     "#### Morpheus Overview\n",
     "\n",
-    "Quick overview of what Morpheus is and how to use it."
+    "Quick overview of what Morpheus is and how to use it.\n"
    ]
   },
   {
@@ -266,7 +275,8 @@
    },
    "outputs": [],
    "source": [
-    "from morpheus.config import Config, PipelineModes\n",
+    "from morpheus.config import Config\n",
+    "from morpheus.config import PipelineModes\n",
     "\n",
     "# Create the pipeline config\n",
     "pipeline_config = Config()\n",
@@ -280,7 +290,7 @@
    "source": [
     "#### Building a Morpheus RAG Pipeline\n",
     "\n",
-    "Below, we will build a pipeline that uses Morpheus to answer questions about the code in the repository that we created a vector database for. This works by using the `LLMEngine` in Morpheus with a `RAGNode`."
+    "Below, we will build a pipeline that uses Morpheus to answer questions about the code in the repository that we created a vector database for. This works by using the `LLMEngine` in Morpheus with a `RAGNode`.\n"
    ]
   },
   {
@@ -293,15 +303,18 @@
    "outputs": [],
    "source": [
     "from textwrap import dedent\n",
+    "\n",
+    "from cyber_dev_day.config import LLMModelConfig\n",
+    "from cyber_dev_day.config import NVFoundationLLMModelConfig\n",
+    "\n",
     "import cudf\n",
-    "from cyber_dev_day.config import EngineConfig, LLMModelConfig, NVFoundationLLMModelConfig\n",
+    "\n",
     "from morpheus._lib.llm import LLMEngine\n",
     "from morpheus.llm.nodes.extracter_node import ExtracterNode\n",
     "from morpheus.llm.nodes.rag_node import RAGNode\n",
     "from morpheus.llm.services.llm_service import LLMService\n",
     "from morpheus.llm.task_handlers.simple_task_handler import SimpleTaskHandler\n",
     "from morpheus.messages import ControlMessage\n",
-    "\n",
     "from morpheus.pipeline.linear_pipeline import LinearPipeline\n",
     "from morpheus.service.vdb.faiss_vdb_service import FaissVectorDBService\n",
     "from morpheus.stages.input.in_memory_source_stage import InMemorySourceStage\n",
@@ -309,6 +322,7 @@
     "from morpheus.stages.output.in_memory_sink_stage import InMemorySinkStage\n",
     "from morpheus.stages.preprocess.deserialize_stage import DeserializeStage\n",
     "from morpheus.utils.concat_df import concat_dataframes\n",
+    "\n",
     "\n",
     "def _build_rag_llm_engine(model_config: LLMModelConfig):\n",
     "\n",
@@ -354,6 +368,7 @@
     "\n",
     "    return engine\n",
     "\n",
+    "\n",
     "async def run_rag_pipeline(p_config: Config, model_config: LLMModelConfig, question: str):\n",
     "    source_dfs = [\n",
     "        cudf.DataFrame({\"questions\": [question]}),\n",
@@ -368,9 +383,7 @@
     "    pipe.add_stage(\n",
     "        DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
     "\n",
-    "    pipe.add_stage(\n",
-    "        LLMEngineStage(p_config,\n",
-    "                        engine=_build_rag_llm_engine(model_config)))\n",
+    "    pipe.add_stage(LLMEngineStage(p_config, engine=_build_rag_llm_engine(model_config)))\n",
     "\n",
     "    sink = pipe.add_stage(InMemorySinkStage(p_config))\n",
     "\n",
@@ -411,8 +424,7 @@
    "source": [
     "### RAG Limitations\n",
     "\n",
-    "Using the pipeline we built, we can now ask questions about the code in the repository and the LLM will be able use the vector database to answer them. However, what happens if we need to ask questions about the code that are not in the vector database? For example, what if we needed to ask questions about the dependencies that the code uses? Would the LLM be able to answer these questions? Let's try it out by re-running our RAG pipeline with a more complex question:\n",
-    "\n"
+    "Using the pipeline we built, we can now ask questions about the code in the repository and the LLM will be able use the vector database to answer them. However, what happens if we need to ask questions about the code that are not in the vector database? For example, what if we needed to ask questions about the dependencies that the code uses? Would the LLM be able to answer these questions? Let's try it out by re-running our RAG pipeline with a more complex question:\n"
    ]
   },
   {
@@ -432,13 +444,14 @@
    "metadata": {},
    "source": [
     "It's likely that the model was not able to determine the answer to this question because it would need additional information. Depending on the model used, you might see output similar to:\n",
+    "\n",
     "```\n",
     "Based on the provided source code, I cannot determine if the `langchain` functions used in the code are deprecated or not.\n",
     "\n",
     "To determine if `langchain` functions are deprecated, you would need to check the documentation for the specific functions being used in the code or consult the maintainers of the `langchain` package.\n",
     "```\n",
     "\n",
-    "How would we go about solving this problem?"
+    "How would we go about solving this problem?\n"
    ]
   },
   {
@@ -448,7 +461,7 @@
    "source": [
     "#### Answering Complex Question with RAG + LLM Agents\n",
     "\n",
-    "Intro to LLM Agents and how our checklist + agents approach can help solve multi-step problems."
+    "Intro to LLM Agents and how our checklist + agents approach can help solve multi-step problems.\n"
    ]
   },
   {
@@ -458,7 +471,7 @@
    "source": [
     "### Running the CVE Pipeline with Morpheus\n",
     "\n",
-    "#### The Engine Config"
+    "#### The Engine Config\n"
    ]
   },
   {
@@ -495,8 +508,7 @@
     "            'data_file': ''\n",
     "        },\n",
     "        'code_repo': {\n",
-    "            'faiss_dir': code_faiss_dir,\n",
-    "            'embedding_model_name': \"sentence-transformers/all-mpnet-base-v2\"\n",
+    "            'faiss_dir': code_faiss_dir, 'embedding_model_name': \"sentence-transformers/all-mpnet-base-v2\"\n",
     "        }\n",
     "    }\n",
     "})"
@@ -520,7 +532,7 @@
    "id": "e98b0bf2",
    "metadata": {},
    "source": [
-    "#### The Pipeline Function"
+    "#### The Pipeline Function\n"
    ]
   },
   {
@@ -532,9 +544,10 @@
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "import cudf\n",
     "from cyber_dev_day.pipeline_utils import build_cve_llm_engine\n",
+    "\n",
+    "import cudf\n",
+    "\n",
     "from morpheus.messages import ControlMessage\n",
     "from morpheus.pipeline.linear_pipeline import LinearPipeline\n",
     "from morpheus.stages.input.in_memory_source_stage import InMemorySourceStage\n",
@@ -543,12 +556,9 @@
     "from morpheus.stages.preprocess.deserialize_stage import DeserializeStage\n",
     "from morpheus.utils.concat_df import concat_dataframes\n",
     "\n",
+    "\n",
     "async def run_cve_pipeline(p_config: Config, e_config: EngineConfig, input_cves: list[str]):\n",
-    "    source_dfs = [\n",
-    "        cudf.DataFrame({\n",
-    "            \"cve_info\": input_cves\n",
-    "        })\n",
-    "    ]\n",
+    "    source_dfs = [cudf.DataFrame({\"cve_info\": input_cves})]\n",
     "\n",
     "    completion_task = {\"task_type\": \"completion\", \"task_dict\": {\"input_keys\": [\"cve_info\"], }}\n",
     "\n",
@@ -556,7 +566,8 @@
     "\n",
     "    pipe.set_source(InMemorySourceStage(p_config, dataframes=source_dfs))\n",
     "\n",
-    "    pipe.add_stage(DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
+    "    pipe.add_stage(\n",
+    "        DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
     "\n",
     "    pipe.add_stage(LLMEngineStage(p_config, engine=build_cve_llm_engine(e_config)))\n",
     "\n",
@@ -569,7 +580,7 @@
     "\n",
     "    logger.info(\"Pipeline complete\")\n",
     "\n",
-    "    print(\"Pipeline complete. Received %s responses:\\n%s\" % (len(messages), responses['response']))\n"
+    "    print(\"Pipeline complete. Received %s responses:\\n%s\" % (len(messages), responses['response']))"
    ]
   },
   {
@@ -594,7 +605,7 @@
    "source": [
     "### Hitting the Limits of the LLMs\n",
     "\n",
-    "This section will go over some of the areas where LLMs may fail."
+    "This section will go over some of the areas where LLMs may fail.\n"
    ]
   },
   {
@@ -618,7 +629,7 @@
     "\n",
     "This section will focus on refining the prototype to fix any gaps, improve the accuracy, and create a production ready pipeline.\n",
     "\n",
-    "### Improving the Model"
+    "### Improving the Model\n"
    ]
   },
   {
@@ -647,7 +658,7 @@
    "source": [
     "### Batching Multiple Requests\n",
     "\n",
-    "This section will show how to run multiple requests simultaneously improving the throughput"
+    "This section will show how to run multiple requests simultaneously improving the throughput\n"
    ]
   },
   {
@@ -670,7 +681,7 @@
    "source": [
     "### Creating a Microservice\n",
     "\n",
-    "This section will show how to convert the development pipeline into a microservice which is capable of handling requests"
+    "This section will show how to convert the development pipeline into a microservice which is capable of handling requests\n"
    ]
   },
   {
@@ -680,10 +691,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code for creating a microservice\n",
-    "import time\n",
-    "import cudf\n",
     "from cyber_dev_day.pipeline_utils import build_cve_llm_engine\n",
+    "\n",
     "from morpheus.messages import ControlMessage\n",
     "from morpheus.messages import MessageMeta\n",
     "from morpheus.pipeline.linear_pipeline import LinearPipeline\n",
@@ -696,6 +705,7 @@
     "from morpheus.utils.concat_df import concat_dataframes\n",
     "from morpheus.utils.http_utils import HTTPMethod\n",
     "\n",
+    "\n",
     "async def run_cve_pipeline_microservice(p_config: Config, e_config: EngineConfig):\n",
     "\n",
     "    completion_task = {\"task_type\": \"completion\", \"task_dict\": {\"input_keys\": [\"cve_info\"], }}\n",
@@ -706,11 +716,7 @@
     "    # [{\"cve_info\": <sting>},\n",
     "    #  {\"cve_info\": <sting>},]\n",
     "    pipe.set_source(\n",
-    "        HttpServerSourceStage(p_config,\n",
-    "                                bind_address=\"0.0.0.0\",\n",
-    "                                port=26302,\n",
-    "                                endpoint=\"/scan\",\n",
-    "                                method=HTTPMethod.POST))\n",
+    "        HttpServerSourceStage(p_config, bind_address=\"0.0.0.0\", port=26302, endpoint=\"/scan\", method=HTTPMethod.POST))\n",
     "\n",
     "    @stage\n",
     "    def print_payload(payload: MessageMeta) -> MessageMeta:\n",
@@ -722,7 +728,8 @@
     "\n",
     "    pipe.add_stage(print_payload(config=p_config))\n",
     "\n",
-    "    pipe.add_stage(DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
+    "    pipe.add_stage(\n",
+    "        DeserializeStage(p_config, message_type=ControlMessage, task_type=\"llm_engine\", task_payload=completion_task))\n",
     "\n",
     "    pipe.add_stage(LLMEngineStage(p_config, engine=build_cve_llm_engine(e_config)))\n",
     "\n",
@@ -760,6 +767,7 @@
     "1. In Jupyter Lab, press Ctrl + Shift + L (Shift + ⌘ + L on Mac) to open a new Launcher tab\n",
     "2. In the Launcher tab, click on the Terminal icon to open a new terminal\n",
     "3. In the terminal, run the following command to send a request to the microservice:\n",
+    "\n",
     "```bash\n",
     "curl --request POST \\\n",
     "  --url http://localhost:26302/scan \\\n",
@@ -768,14 +776,15 @@
     "      \"cve_info\" : \"An issue was discovered in the Linux kernel through 6.0.9. drivers/media/dvb-core/dvbdev.c has a use-after-free, related to dvb_register_device dynamically allocating fops.\"\n",
     "   }]'\n",
     "```\n",
+    "\n",
     "4. Once the request is sent, the microservice will process the request and return the results in the terminal\n",
     "   1. To see the results, switch back to the Notebook tab. You should see that the microservice received your request and started processing it.\n",
     "   ```\n",
     "   I20240308 16:00:56.422039 3010283 http_server.cpp:129] Received request: POST : /scan\n",
     "   ```\n",
     "   2. It helps to have the terminal and the notebook side by side so you can see the results in the terminal as they come in. To do this, click on the terminal tab and drag it to the right side of the screen. You should then be able to see the terminal and the notebook side by side similar to the image below:\n",
-    "   ![Terminal and Notebook Side by Side](./images/side_by_side.png)\n",
-    "5. To stop the microservice, interrupt the kernel by pressing the stop button in the toolbar"
+    "      ![Terminal and Notebook Side by Side](./images/side_by_side.png)\n",
+    "5. To stop the microservice, interrupt the kernel by pressing the stop button in the toolbar\n"
    ]
   }
  ],
